--- a/.github/workflows/fastapi.yml
+++ b/.github/workflows/fastapi.yml
@@ -10,6 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Install dependencies
+      working-directory: ./backend
       run: |
         python3 -m venv venv
         source venv/bin/activate
