--- a/.github/workflows/fastapi.yml
+++ b/.github/workflows/fastapi.yml
@@ -1,4 +1,4 @@
-name: FastApi CI
+name: FastAPI CI
 
 on:
   push:
@@ -7,11 +7,23 @@ on:
 jobs:
   build:
     runs-on: [self-hosted]
+    defaults:
+      run:
+        working-directory: ./backend
+
     steps:
-    - uses: actions/checkout@v4
-    - name: Install dependencies
-      working-directory: ./backend
-      run: |
-        python3 -m venv venv
-        source venv/bin/activate
-        pip install -r requirements.txt
+      - uses: actions/checkout@v4
+
+      - name: Build and start containers
+        run: docker compose up -d --build
+
+      - name: Run migrations
+        run: docker compose run --rm wc_solutions_migrate
+
+      - name: Run tests
+        run: docker compose exec -T wc_solutions_dev pytest -v
+
+      - name: Stop containers
+        if: always()
+        run: docker compose down
+
