changed the Dockerfile for the gunicorn

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,14 +11,14 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy the rest of the app code
 COPY . .
 
-# CMD ["uvicorn", "crm_backend.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
-# CMD ["gunicorn", "crm_backend.main:app", "-w", "4", "-k", "uvicorn.workers.UvicornWorker", "-b", "0.0.0.0:8000"]
+# CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+CMD ["gunicorn", "main:app", "-w", "4", "-k", "uvicorn.workers.UvicornWorker", "-b", "0.0.0.0:8000"]
 
 # Default to development with reload (can be overridden in docker-compose)
-CMD ["sh", "-c", "\
-    if [ \"$APP_ENV\" = 'prod' ]; then \
-      gunicorn main:app -w 4 -k uvicorn.workers.UvicornWorker -b 0.0.0.0:8000; \
-    else \
-      uvicorn main:app --host 0.0.0.0 --port 8000 --reload; \
-    fi \
-"]
+# CMD ["sh", "-c", "\
+#     if [ \"$APP_ENV\" = 'prod' ]; then \
+#       gunicorn main:app -w 4 -k uvicorn.workers.UvicornWorker -b 0.0.0.0:8000; \
+#     else \
+#       uvicorn main:app --host 0.0.0.0 --port 8000 --reload; \
+#     fi \
+# "]
