--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -78,10 +78,8 @@ services:
       - DATABASE_URL=${DATABASE_URL}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
     depends_on:
-    wc_solutions_postgres_db:
-      condition: service_healthy
-    wc_solutions_redis_backend:
-      condition: service_healthy
+      - wc_solutions_postgres_db
+      - wc_solutions_redis_backend
     expose:
       - "8000"  # internal only (not mapped to host)
     networks:
