--- a/.github/workflows/fastapi-deploy.yml
+++ b/.github/workflows/fastapi-deploy.yml
@@ -13,14 +13,11 @@ jobs:
         working-directory: ./backend
 
     steps:
-      # 0️⃣ Fix permissions and clean Python artifacts
-      - name: Fix permissions on repo
-        run: |
-          sudo chown -R $USER:$USER $GITHUB_WORKSPACE
-          sudo chmod -R u+rwX $GITHUB_WORKSPACE
-          find $GITHUB_WORKSPACE -name '*.pyc' -delete
       # 1️⃣ Checkout repo
       - uses: actions/checkout@v4
+      
+      - name: Clean Python artifacts
+        run: find $GITHUB_WORKSPACE/backend -name '*.pyc' -delete
 
       # 2️⃣ Copy environment file
       - name: Copy environment file
