--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,11 +50,11 @@
     "i18next": "^25.6.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.546.0",
-    "react": "^19.1.1",
+    "react": "18.2.0",
     "react-apexcharts": "^1.8.0",
     "react-datepicker": "^8.8.0",
     "react-day-picker": "9.8.0",
-    "react-dom": "^19.1.1",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.60.0",
     "react-i18next": "^16.1.0",
     "react-redux": "^9.2.0",
@@ -65,15 +65,19 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.9",
+    "vaul": "0.8.9",
     "zod": "3.25.76"
+  },
+  "overrides": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "^22",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^5.0.4",
     "@vitejs/plugin-react-swc": "^4.1.0",
     "autoprefixer": "^10.4.21",
